// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Basic link 1`] = `
.css-108eusz,
[data-css-108eusz] {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  color: #0f75b0;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  font-weight: 400;
}

.css-108eusz *,
[data-css-108eusz] *,
.css-108eusz *::before,
[data-css-108eusz] *::before,
.css-108eusz *::after,
[data-css-108eusz] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-108eusz:hover,
[data-css-108eusz]:hover,
.css-108eusz[data-simulate-hover],
[data-css-108eusz][data-simulate-hover] {
  color: #1b8bcc;
}

.css-108eusz:focus,
[data-css-108eusz]:focus,
.css-108eusz[data-simulate-focus],
[data-css-108eusz][data-simulate-focus] {
  color: #0f75b0;
}

.css-108eusz:active,
[data-css-108eusz]:active,
.css-108eusz[data-simulate-active],
[data-css-108eusz][data-simulate-active] {
  color: #0a6091;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#51b3f0",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#0f75b0",
        "borderColor_hover": "#2f9fe0",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.5625em",
        "borderRadius_2": "0.75em",
        "borderRadius_3": "1.125em",
        "borderRadius_4": "1.5em",
        "borderRadius_5": "2em",
        "color_black": "#000",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_heading": "#0f75b0",
        "color_helpText_danger": "#ad0e0e",
        "color_helpText_success": "#0a8f4c",
        "color_helpText_warning": "#a67305",
        "color_link": "#0f75b0",
        "color_link_active": "#0a6091",
        "color_link_focus": "#0f75b0",
        "color_link_hover": "#1b8bcc",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#0a6091",
        "color_text_success": "#06783f",
        "color_text_warning": "#bd3909",
        "color_theme_10": "#e1f3fc",
        "color_theme_100": "#084d75",
        "color_theme_20": "#c0e5fc",
        "color_theme_30": "#9fd9fc",
        "color_theme_40": "#79c7f7",
        "color_theme_50": "#51b3f0",
        "color_theme_60": "#2f9fe0",
        "color_theme_70": "#1b8bcc",
        "color_theme_80": "#0f75b0",
        "color_theme_90": "#0a6091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 8,
        "fontSize_h1": "4.25em",
        "fontSize_h2": "3.5em",
        "fontSize_h3": "2.75em",
        "fontSize_h4": "2.25em",
        "fontSize_h5": "1.75em",
        "fontSize_h6": "1.75em",
        "fontSize_mouse": "1.375em",
        "fontSize_prose": "2em",
        "fontSize_ui": "1.75em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "rgba(0,0,0,0.5) 0 1px 2px",
        "shadow_2": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.35) 0 2px 4px",
        "shadow_3": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.25) 0 2px 8px",
        "shadow_4": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.30) 0 4px 10px",
        "shadow_5": "rgba(0,0,0,0.5) 0 1px 2px, rgba(0,0,0,0.60) 0 15px 15px",
        "size_jumbo": "6.5em",
        "size_large": "5em",
        "size_medium": "4em",
        "size_small": "3em",
        "spacing_double": "2em",
        "spacing_half": "0.5em",
        "spacing_oneAndAHalf": "1.5em",
        "spacing_quad": "4em",
        "spacing_quarter": "0.25em",
        "spacing_single": "1em",
        "spacing_triple": "3em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="<p>
      <Link href=\\"http://example.com\\">Light years</Link> star stuff
      <Link href=\\"http://example.com\\">harvesting</Link> star light citizens of distant
      <Link href=\\"http://example.com\\">epochs</Link> encyclopaedia galactica vastness is bearable only through love,
      shores of the cosmic ocean!
    </p>"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "Link": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "Link": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <p>
              <Link
                href="http://example.com"
              >
                <Link
                  href="http://example.com"
                >
                  <a
                    className="css-108eusz"
                    href="http://example.com"
                  >
                    Light years
                  </a>
                </Link>
              </Link>
               star stuff 
              <Link
                href="http://example.com"
              >
                <Link
                  href="http://example.com"
                >
                  <a
                    className="css-108eusz"
                    href="http://example.com"
                  >
                    harvesting
                  </a>
                </Link>
              </Link>
               star light citizens of distant 
              <Link
                href="http://example.com"
              >
                <Link
                  href="http://example.com"
                >
                  <a
                    className="css-108eusz"
                    href="http://example.com"
                  >
                    epochs
                  </a>
                </Link>
              </Link>
               encyclopaedia galactica vastness is bearable only through love, shores of the cosmic ocean!
            </p>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Link Children 1`] = `
.css-108eusz,
[data-css-108eusz] {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  color: #0f75b0;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  font-weight: 400;
}

.css-108eusz *,
[data-css-108eusz] *,
.css-108eusz *::before,
[data-css-108eusz] *::before,
.css-108eusz *::after,
[data-css-108eusz] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-108eusz:hover,
[data-css-108eusz]:hover,
.css-108eusz[data-simulate-hover],
[data-css-108eusz][data-simulate-hover] {
  color: #1b8bcc;
}

.css-108eusz:focus,
[data-css-108eusz]:focus,
.css-108eusz[data-simulate-focus],
[data-css-108eusz][data-simulate-focus] {
  color: #0f75b0;
}

.css-108eusz:active,
[data-css-108eusz]:active,
.css-108eusz[data-simulate-active],
[data-css-108eusz][data-simulate-active] {
  color: #0a6091;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#51b3f0",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#0f75b0",
        "borderColor_hover": "#2f9fe0",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.5625em",
        "borderRadius_2": "0.75em",
        "borderRadius_3": "1.125em",
        "borderRadius_4": "1.5em",
        "borderRadius_5": "2em",
        "color_black": "#000",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_heading": "#0f75b0",
        "color_helpText_danger": "#ad0e0e",
        "color_helpText_success": "#0a8f4c",
        "color_helpText_warning": "#a67305",
        "color_link": "#0f75b0",
        "color_link_active": "#0a6091",
        "color_link_focus": "#0f75b0",
        "color_link_hover": "#1b8bcc",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#0a6091",
        "color_text_success": "#06783f",
        "color_text_warning": "#bd3909",
        "color_theme_10": "#e1f3fc",
        "color_theme_100": "#084d75",
        "color_theme_20": "#c0e5fc",
        "color_theme_30": "#9fd9fc",
        "color_theme_40": "#79c7f7",
        "color_theme_50": "#51b3f0",
        "color_theme_60": "#2f9fe0",
        "color_theme_70": "#1b8bcc",
        "color_theme_80": "#0f75b0",
        "color_theme_90": "#0a6091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 8,
        "fontSize_h1": "4.25em",
        "fontSize_h2": "3.5em",
        "fontSize_h3": "2.75em",
        "fontSize_h4": "2.25em",
        "fontSize_h5": "1.75em",
        "fontSize_h6": "1.75em",
        "fontSize_mouse": "1.375em",
        "fontSize_prose": "2em",
        "fontSize_ui": "1.75em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "rgba(0,0,0,0.5) 0 1px 2px",
        "shadow_2": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.35) 0 2px 4px",
        "shadow_3": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.25) 0 2px 8px",
        "shadow_4": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.30) 0 4px 10px",
        "shadow_5": "rgba(0,0,0,0.5) 0 1px 2px, rgba(0,0,0,0.60) 0 15px 15px",
        "size_jumbo": "6.5em",
        "size_large": "5em",
        "size_medium": "4em",
        "size_small": "3em",
        "spacing_double": "2em",
        "spacing_half": "0.5em",
        "spacing_oneAndAHalf": "1.5em",
        "spacing_quad": "4em",
        "spacing_quarter": "0.25em",
        "spacing_single": "1em",
        "spacing_triple": "3em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="<Link href=\\"http://example.com\\">
      <img alt=\\"a headshot of Bill Murray\\" src=\\"https://www.fillmurray.com/100/100\\" />
    </Link>"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "Link": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "Link": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <Link
              href="http://example.com"
            >
              <Link
                href="http://example.com"
              >
                <a
                  className="css-108eusz"
                  href="http://example.com"
                >
                  <img
                    alt="a headshot of Bill Murray"
                    src="https://www.fillmurray.com/100/100"
                  />
                </a>
              </Link>
            </Link>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;

exports[`Link States 1`] = `
.css-108eusz,
[data-css-108eusz] {
  -moz-box-sizing: border-box;
  box-sizing: border-box;
  color: #0f75b0;
  font-family: Open Sans, -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
  font-size: 16px;
  line-height: 1.25;
  font-weight: 400;
}

.css-108eusz *,
[data-css-108eusz] *,
.css-108eusz *::before,
[data-css-108eusz] *::before,
.css-108eusz *::after,
[data-css-108eusz] *::after {
  -moz-box-sizing: inherit;
  box-sizing: inherit;
}

.css-108eusz:hover,
[data-css-108eusz]:hover,
.css-108eusz[data-simulate-hover],
[data-css-108eusz][data-simulate-hover] {
  color: #1b8bcc;
}

.css-108eusz:focus,
[data-css-108eusz]:focus,
.css-108eusz[data-simulate-focus],
[data-css-108eusz][data-simulate-focus] {
  color: #0f75b0;
}

.css-108eusz:active,
[data-css-108eusz]:active,
.css-108eusz[data-simulate-active],
[data-css-108eusz][data-simulate-active] {
  color: #0a6091;
}

.css-2b2qop > a,
[data-css-2b2qop] > a {
  margin-right: 0.5rem;
}

<ThemeProvider>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor_danger": "#db2929",
        "backgroundColor_danger_active": "#c71818",
        "backgroundColor_danger_focus": "#db2929",
        "backgroundColor_danger_hover": "#eb4d4d",
        "backgroundColor_disabled": "#ebeff5",
        "backgroundColor_input_danger": "#fce3e3",
        "backgroundColor_input_success": "#e8fcf2",
        "backgroundColor_input_warning": "#fcf1dc",
        "backgroundColor_link_focus": "#dde3ed",
        "backgroundColor_success": "#0a8f4c",
        "backgroundColor_success_active": "#06783f",
        "backgroundColor_success_focus": "#0a8f4c",
        "backgroundColor_success_hover": "#10a35a",
        "backgroundColor_warning": "#e05b2b",
        "backgroundColor_warning_active": "#cf4615",
        "backgroundColor_warning_focus": "#e05b2b",
        "backgroundColor_warning_hover": "#ed774c",
        "borderColor": "#c8d1e0",
        "borderColor_active": "#51b3f0",
        "borderColor_danger": "#ad0e0e",
        "borderColor_danger_active": "#7d0606",
        "borderColor_danger_focus": "#c71818",
        "borderColor_danger_hover": "#db2929",
        "borderColor_focus": "#0f75b0",
        "borderColor_hover": "#2f9fe0",
        "borderColor_success": "#0a8f4c",
        "borderColor_success_active": "#046132",
        "borderColor_success_focus": "#06783f",
        "borderColor_success_hover": "#1fc06f",
        "borderColor_warning": "#d19411",
        "borderColor_warning_active": "#916504",
        "borderColor_warning_focus": "#cf4615",
        "borderColor_warning_hover": "#e3a322",
        "borderRadius_1": "0.5625em",
        "borderRadius_2": "0.75em",
        "borderRadius_3": "1.125em",
        "borderRadius_4": "1.5em",
        "borderRadius_5": "2em",
        "color_black": "#000",
        "color_caption": "#58606e",
        "color_gray_10": "#f5f7fa",
        "color_gray_100": "#333840",
        "color_gray_20": "#ebeff5",
        "color_gray_30": "#dde3ed",
        "color_gray_40": "#c8d1e0",
        "color_gray_50": "#afbacc",
        "color_gray_60": "#8e99ab",
        "color_gray_70": "#707a8a",
        "color_gray_80": "#58606e",
        "color_gray_90": "#434a54",
        "color_heading": "#0f75b0",
        "color_helpText_danger": "#ad0e0e",
        "color_helpText_success": "#0a8f4c",
        "color_helpText_warning": "#a67305",
        "color_link": "#0f75b0",
        "color_link_active": "#0a6091",
        "color_link_focus": "#0f75b0",
        "color_link_hover": "#1b8bcc",
        "color_placeholder": "#8e99ab",
        "color_text": "#333840",
        "color_text_danger": "#ad0e0e",
        "color_text_disabled": "#afbacc",
        "color_text_ondanger": "#fff",
        "color_text_onprimary": "#fff",
        "color_text_onsuccess": "#fff",
        "color_text_onwarning": "#fff",
        "color_text_primary": "#0a6091",
        "color_text_success": "#06783f",
        "color_text_warning": "#bd3909",
        "color_theme_10": "#e1f3fc",
        "color_theme_100": "#084d75",
        "color_theme_20": "#c0e5fc",
        "color_theme_30": "#9fd9fc",
        "color_theme_40": "#79c7f7",
        "color_theme_50": "#51b3f0",
        "color_theme_60": "#2f9fe0",
        "color_theme_70": "#1b8bcc",
        "color_theme_80": "#0f75b0",
        "color_theme_90": "#0a6091",
        "color_white": "#fff",
        "direction": "ltr",
        "fontFamily": "Open Sans",
        "fontFamily_monospace": "monospace",
        "fontFamily_system": "-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif, \\"Apple Color Emoji\\", \\"Segoe UI Emoji\\", \\"Segoe UI Symbol\\"",
        "fontSize_base": 8,
        "fontSize_h1": "4.25em",
        "fontSize_h2": "3.5em",
        "fontSize_h3": "2.75em",
        "fontSize_h4": "2.25em",
        "fontSize_h5": "1.75em",
        "fontSize_h6": "1.75em",
        "fontSize_mouse": "1.375em",
        "fontSize_prose": "2em",
        "fontSize_ui": "1.75em",
        "fontWeight_bold": 700,
        "fontWeight_extraBold": 800,
        "fontWeight_regular": 400,
        "fontWeight_semiBold": 600,
        "lineHeight": 1.25,
        "lineHeight_prose": 1.5,
        "shadow_1": "rgba(0,0,0,0.5) 0 1px 2px",
        "shadow_2": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.35) 0 2px 4px",
        "shadow_3": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.25) 0 2px 8px",
        "shadow_4": "rgba(0,0,0,0.5) 0 1px 1px, rgba(0,0,0,0.30) 0 4px 10px",
        "shadow_5": "rgba(0,0,0,0.5) 0 1px 2px, rgba(0,0,0,0.60) 0 15px 15px",
        "size_jumbo": "6.5em",
        "size_large": "5em",
        "size_medium": "4em",
        "size_small": "3em",
        "spacing_double": "2em",
        "spacing_half": "0.5em",
        "spacing_oneAndAHalf": "1.5em",
        "spacing_quad": "4em",
        "spacing_quarter": "0.25em",
        "spacing_single": "1em",
        "spacing_triple": "3em",
        "zIndex_100": 100,
        "zIndex_1600": 1600,
        "zIndex_200": 200,
        "zIndex_400": 400,
        "zIndex_800": 800,
      }
    }
  >
    <LiveProvider
      code="<DemoLayout>
      <Link href=\\"http://example.com\\">Default</Link>
      <Link {...simulate('hover')} href=\\"http://example.com\\">Hover</Link>
      <Link {...simulate('focus')} href=\\"http://example.com\\">Focus</Link>
      <Link {...simulate('active')} href=\\"http://example.com\\">Active</Link>
    </DemoLayout>"
      mountStylesheet={false}
      noInline={false}
      scope={
        Object {
          "DemoLayout": [Function],
          "Link": [Function],
          "simulate": [Function],
        }
      }
    >
      <div
        className="react-live"
        scope={
          Object {
            "DemoLayout": [Function],
            "Link": [Function],
            "simulate": [Function],
          }
        }
      >
        <LivePreview>
          <div
            className="react-live-preview"
          >
            <glamorous(div)>
              <div
                className="css-2b2qop"
              >
                <Link
                  href="http://example.com"
                >
                  <Link
                    href="http://example.com"
                  >
                    <a
                      className="css-108eusz"
                      href="http://example.com"
                    >
                      Default
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-hover=""
                  href="http://example.com"
                >
                  <Link
                    data-simulate-hover=""
                    href="http://example.com"
                  >
                    <a
                      className="css-108eusz"
                      data-simulate-hover=""
                      href="http://example.com"
                    >
                      Hover
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-focus=""
                  href="http://example.com"
                >
                  <Link
                    data-simulate-focus=""
                    href="http://example.com"
                  >
                    <a
                      className="css-108eusz"
                      data-simulate-focus=""
                      href="http://example.com"
                    >
                      Focus
                    </a>
                  </Link>
                </Link>
                <Link
                  data-simulate-active=""
                  href="http://example.com"
                >
                  <Link
                    data-simulate-active=""
                    href="http://example.com"
                  >
                    <a
                      className="css-108eusz"
                      data-simulate-active=""
                      href="http://example.com"
                    >
                      Active
                    </a>
                  </Link>
                </Link>
              </div>
            </glamorous(div)>
          </div>
        </LivePreview>
      </div>
    </LiveProvider>
  </ThemeProvider>
</ThemeProvider>
`;
